--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -63,11 +63,11 @@
                     <span>
                         <div
                             [ngClass]="{
-                                emergencia: rowData[col.field] == 'A - EMERGENCIA',
-                                muitoUrgente: rowData[col.field] == 'B - MUITO_URGENTE',
-                                urgente: rowData[col.field] == 'C - URGENTE',
-                                poucoUrgente: rowData[col.field] == 'D - POUCO_URGENTE',
-                                naoUrgente: rowData[col.field] == 'E - NAO_URGENTE'
+                                emergencia: rowData[col.field] == 'EMERGENCIA',
+                                muitoUrgente: rowData[col.field] == 'MUITO_URGENTE',
+                                urgente: rowData[col.field] == 'URGENTE',
+                                poucoUrgente: rowData[col.field] == 'POUCO_URGENTE',
+                                naoUrgente: rowData[col.field] == 'NAO_URGENTE'
                             }"
                             [pTooltip]="rowData[col.field]"
                         ></div>
