--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -75,6 +75,8 @@
                 </ng-template>
             </p-column>
             </basis-datatable>
+            <p-confirmDialog header="Confirmação" acceptLabel="Sim" rejectLabel="Não">
+            </p-confirmDialog>            
             <div class="ui-g-9"></div>
             <div class="ui-g-2">
                 <button
