--- a/pacientes/src/main/resources/templates/paciente.html
+++ b/pacientes/src/main/resources/templates/paciente.html
@@ -20,7 +20,7 @@
    </header>
    <div id="form">
       <div id="dados-pessoais">
-         <table summary="Dados Pessoais">
+         <table id="Dados-Pessoais">
             <tr>
                <th scope="col"><h5>Nome Completo</h5></th>
                <th scope="col"><h5>Nome Social</h5></th>
@@ -97,7 +97,7 @@
       </div>
       <div id="contatos-paciente">
          <p>Contatos do Paciente:</p>
-         <table summary="Contatos do Paciente">
+         <table id="Contatos-do-Paciente">
             <tr>
                <th scope="col">Tipo</th>
                <th scope="col">DDD</th>
@@ -114,7 +114,7 @@
       </div>
       <div id="endereco">
          <p>Endereços:</p>
-         <table summary="Endereços">
+         <table id="Endercos">
             <tr>
                <th scope="col">Município</th>
                <th scope="col">CEP</th>
@@ -134,7 +134,7 @@
          </table>
       </div>
       <div id="responsavel">
-         <table summary="Responsável">
+         <table id="Resposavel-Paciente">
             <tr>
                <th scope="col"><h5>Nome do Responsável</h5></th>
                <th scope="col"><h5>Grau de Parentesco</h5></th>
@@ -145,7 +145,7 @@
             </tr>
          </table>
          <div id="responsavel-tabela">
-            <table summary="Tabela Responsáveis">
+            <table id="Tabela-Responsaveis">
                <tr>
                   <th scope="col">Tipo</th>
                   <th scope="col">DDD</th>
@@ -162,7 +162,7 @@
          </div>
       </div>
       <div id="documentos">
-         <table summary="Documentos">
+         <table id="Documntos-Paciente">
             <tr>
                <th scope="col"><h5>Número da Identidade</h5></th>
                <th scope="col"><h5>Órgão Emissor</h5></th>
@@ -198,7 +198,7 @@
          </table>
       </div>
       <div id="certidao">
-         <table summary="Certidão">
+         <table id="Certidao-Paciente">
             <tr>
                <th scope="col"><h5>Registro de Nascimento</h5></th>
                <th scope="col"><h5>Tipo de Certidão</h5></th>
@@ -234,7 +234,7 @@
          </table>
       </div>
       <div id="sus-container">
-         <table summary="Cartão SUS">
+         <table id="Cartao-SUS">
             <tr>
                <th scope="col"><h5>Número CNS</h5></th>
                <th scope="col"><h5>Justificativa da Ausẽncia CNS</h5></th>
@@ -259,7 +259,7 @@
             </tr>
          </table>
             <h4>Se naturalizado:</h4>
-         <table summary="Se naturalizado">
+         <table id="Se-Naturalizado">
             <tr>
                <th scope="col"><h5>Data de Entrada no Brasil</h5></th>
                <th scope="col"><h5>Data de Naturalização</h5></th>
