Adicionar filtro de  pesquisa consulta-emergencia II - BASIS-182764

--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -99,7 +99,7 @@
                 <span class="ui-float-label">
                     <p-calendar
                     [locale]="localizacao" 
-                    dateFormat="yy-mm-dd"
+                    dateFormat="dd-mm-yy"
                     formControlName="dataFinal"
                     [(ngModel)]="data">
                     </p-calendar>
