--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -6,23 +6,39 @@
         </span>
 
         <div class="ui-g">
-            <div class="ui-g-11 ui-fluid ui-float-label">
-                <span class style="margin-top: 5px;">
-                    <input type="text" pInputText name="filtro" required="true" />
-                    <label>Pesquisar Triagem</label>
+            <div class="ui-g-12 ui-md-12 ui-fluid">
+                <span class="md-inputfield" style="margin-top: 5px;">
+                    <input
+                        type="text"
+                        pInputText
+                        class="ui-inputtext"
+                        name="filtro"
+                        [(ngModel)]="elasticQuery.value"
+                    />
+                    <label>Nome paciente</label>
                 </span>
             </div>
             <div class="ui-g-12">
-                <div class="ui-g-2"></div>
-                <div class="ui-g-3">
-                    <button
-                        pButton
-                        type="button"
-                        label="Pesquisar"
-                        icon="ui-icon-search"
-                        bTooltip="Pesquisar paciente por nome."
-                    ></button>
-                </div>
+                <div class="ui-g-12">
+                    <div class="ui-g-3">
+                        <button
+                            pButton
+                            type="button"
+                            label="Pesquisar"
+                            icon="ui-icon-search"
+                            bTooltip="Pesquisar paciente por nome."
+                            (click)="pesquisar()"
+                        ></button>
+                    </div>
+                    <div class="ui-g-3">
+                        <button
+                            pButton
+                            type="button"
+                            label="Limpar"
+                            bTooltip="Limpar pesquisa de triagem."
+                            (click)="limparPesquisa()"
+                        ></button>
+                    </div>
                 <div class="ui-g-3">
                     <button
                         pButton
@@ -35,40 +51,40 @@
                 </div>
             </div>
             <div class="ui-g-12 ui-md-3"></div>
-            <basis-datatable  [value]="triagens" (buttonClick)="onClick($event)">
+            <basis-datatable [url]="searchUrl" (buttonClick)="onClick($event)">
 
-            <p-column header="Nome do Paciente" field="paciente">
-                <ng-template let-col="col" let-paciente="rowData" pTemplate="body">
-                    {{ paciente[col.field] === null || paciente[col.field] === undefined ? undefined : paciente[col.field].nome }}
+            <p-column header="Nome do Paciente" field="paciente.nome">
+                <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
+                    {{ triagem?.paciente?.nome === undefined ? "" : triagem?.paciente?.nome}}
                 </ng-template>
             </p-column>
-            <p-column header="Nome Social" field="paciente">
-                <ng-template let-col="col" let-paciente="rowData" pTemplate="body">
-                    {{ paciente[col.field] === null || paciente[col.field] === undefined ? undefined : paciente[col.field].nomeSocial }}
+            <p-column header="Nome Social" field="paciente.nomeSocial">
+                <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
+                    {{ triagem?.paciente?.nomeSocial === undefined ? "" : triagem?.paciente?.nomeSocial }}
                 </ng-template>
             </p-column>  
-            <p-column header="Nome da Mãe" field="paciente">
-                <ng-template let-col="col" let-paciente="rowData" pTemplate="body">
-                    {{ paciente[col.field].genitores === null || paciente[col.field].genitores === undefined ? undefined : paciente[col.field].genitores.nomeDaMae }}
+            <p-column header="Nome da Mãe" field="paciente.genitores.nomeDaMae">
+                <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
+                    {{ triagem?.paciente?.genitores?.nomeDaMae === undefined ? "" : triagem?.paciente?.genitores?.nomeDaMae}}
                 </ng-template>
             </p-column>
             <p-column header="Data/Hora da Chegada" field="dataHoraDoAtendimento">
-                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                    {{ rowData[col.field] | date: 'dd/MM/yyyy - HH:mm' }}
+                <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
+                    {{ triagem?.dataHoraDoAtendimento | date: 'dd/MM/yyyy - HH:mm' }}
                 </ng-template>
             </p-column>
             <p-column header="Classificação" field="classificacaoDeRisco">
-                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                <ng-template let-col="col" let-triagem="rowData" pTemplate="body">
                     <span>
                         <div
                             [ngClass]="{
-                                emergencia: rowData[col.field] == 'EMERGENCIA',
-                                muitoUrgente: rowData[col.field] == 'MUITO_URGENTE',
-                                urgente: rowData[col.field] == 'URGENTE',
-                                poucoUrgente: rowData[col.field] == 'POUCO_URGENTE',
-                                naoUrgente: rowData[col.field] == 'NAO_URGENTE'
+                                emergencia: triagem[col.field] == 'EMERGENCIA',
+                                muitoUrgente: triagem[col.field] == 'MUITO_URGENTE',
+                                urgente: triagem[col.field] == 'URGENTE',
+                                poucoUrgente: triagem[col.field] == 'POUCO_URGENTE',
+                                naoUrgente: triagem[col.field] == 'NAO_URGENTE'
                             }"
-                            [pTooltip]="rowData[col.field]"
+                            [pTooltip]="triagem[col.field]"
                         ></div>
                     </span>
                 </ng-template>
